--- a/client/css/style.css
+++ b/client/css/style.css
@@ -10,14 +10,30 @@ body, html {
 }
 
 textarea {
-    width: calc(100% - 16px);;
+    width: calc(100% - 16px);
     height: 80px;
     margin: 8px;
-    padding: 12px 12px;
+    padding: 12px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
+}
+
+chatbox {
+    width: calc(100% - 16px);
+    height:270px;
+    text-align:left;
+    margin:8px;
+    padding:12px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+    overflow-y: auto; 
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
  
