--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     height: 100%;
     overflow: hidden;
+    background-color: #bbbbbb;
 }
 
 ::-webkit-scrollbar {
@@ -15,7 +16,7 @@ textarea {
     margin: 8px;
     padding: 12px;
     box-sizing: border-box;
-    border: 2px solid #ccc;
+    border: 4px solid #999;
     border-radius: 4px;
     background-color: #f8f8f8;
     resize: none;
@@ -23,16 +24,15 @@ textarea {
 
 chatbox {
     width: calc(100% - 16px);
-    height:270px;
+    height:calc(100% - 80px - 32px - 48px);
     text-align:left;
     margin:8px;
     padding:12px;
     box-sizing: border-box;
-    border: 2px solid #ccc;
+    border: 4px solid #999;
     border-radius: 4px;
     background-color: #f8f8f8;
-    resize: none;
-    overflow-y: auto; 
+    overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
 }
