--- a/client/css/style.css
+++ b/client/css/style.css
@@ -32,6 +32,13 @@ button:hover {
     opacity: 0.8;
 }
 
+errorText {
+    font-size: 22px;
+    color: #a22;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 welcome {
     font-size: 32px;
     color: #222;
@@ -55,10 +62,10 @@ textarea {
 
 chatbox {
     font-size: 18px;
-    width: calc(100% - 16px - 200px);
+    width: calc(100% - 16px - 240px);
     height: calc(100% - 80px - 32px - 48px);
     text-align:left;
-    margin:8px;
+    margin:8px 8px;
     padding:12px;
     box-sizing: border-box;
     border: 4px solid #999;
@@ -71,10 +78,10 @@ chatbox {
 
 listbox {
     font-size: 18px;
-    width: calc(200px - 16px);
+    width: calc(240px - 16px);
     height: calc(100% - 80px - 32px - 48px);
     text-align:left;
-    margin:8px;
+    margin:8px 8px;
     padding:12px;
     box-sizing: border-box;
     border: 4px solid #999;
