--- a/client/css/style.css
+++ b/client/css/style.css
@@ -8,11 +8,7 @@ body, html {
     color: #000;
 }
 
-.otherText {
-    color: #333;
-}
-
-.yourText {
+.text {
     color: #000;
 }
 
@@ -41,6 +37,14 @@ errorText {
 
 welcome {
     font-size: 32px;
+    color: #222;
+    margin: 8px;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+chatterCount {
+    font-size: 28px;
     color: #222;
     margin: 8px;
     text-align: left;
