--- a/client/css/style.css
+++ b/client/css/style.css
@@ -43,6 +43,14 @@ welcome {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+loginName {
+    font-size: 40px;
+    color: #222;
+    margin: 8px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 chatterCount {
     font-size: 28px;
     color: #222;
@@ -98,10 +106,7 @@ listbox {
  
 input {
     position: fixed;
-    left: calc(50% - 150px);
-    top: 50px;
     font-size: 16px;
-    width: 300px;
     height: 50px;
     margin: 8px;
     padding: 12px;
@@ -109,5 +114,22 @@ input {
     border: 4px solid #999;
     border-radius: 4px;
     background-color: #f8f8f8;
-    resize: none;
 }
+
+loginBox {
+    font-size: 18px;
+    width: calc(33.33% - 24px);
+    height: calc(100% - 250px);
+    text-align:left;
+    margin:8px 8px;
+    padding:12px;
+    box-sizing: border-box;
+    border: 4px solid #999;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    overflow-y: auto !important; 
+    overflow-x: hidden !important; 
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+ 
