--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,12 +4,52 @@ body, html {
     background-color: #bbbbbb;
 }
 
-.name {
+.baseName {
     color: #000;
 }
 
-.text {
+.baseText {
     color: #000;
+}
+
+.guestName {
+    color: #444;
+}
+
+.guestText {
+    color: #444;
+}
+
+.adminName {
+    color: #a11;
+}
+
+.adminText {
+    color: #300;
+}
+
+.modName {
+    color: #119;
+}
+
+.modText {
+    color: #002;
+}
+
+.plusName {
+    color: #040;
+}
+
+.plusText {
+    color: #010;
+}
+
+.plusPlusName {
+    color: #550;
+}
+
+.plusPlusText {
+    color: #110;
 }
 
 button {
@@ -31,6 +71,13 @@ button:hover {
 errorText {
     font-size: 22px;
     color: #a22;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+successText {
+    font-size: 22px;
+    color: #2a2;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -82,7 +129,7 @@ chatbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    background-color: #f0f0f0;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -98,7 +145,7 @@ listbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    background-color: #f0f0f0;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -113,7 +160,7 @@ input {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    background-color: #f0f0f0;
 }
 
 loginBox {
@@ -126,9 +173,8 @@ loginBox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
-    overflow-y: auto !important; 
-    overflow-x: hidden !important; 
+    background-color: #f0f0f0;
+    overflow: hidden !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
 }
