--- a/client/css/style.css
+++ b/client/css/style.css
@@ -52,6 +52,28 @@ body, html {
     color: #110;
 }
 
+/* The Modal (background for drawing) */
+.modal {
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
 button {
     font-size: 18px;
     background-color: rgb(76, 130, 175);
@@ -65,7 +87,15 @@ button {
 }
 
 button:hover {
-    opacity: 0.8;
+    filter: brightness(0.85);
+}
+
+img:hover {
+    filter: brightness(0.65);
+}
+
+img:active {
+    filter: brightness(0.5);
 }
 
 errorText {
@@ -116,7 +146,7 @@ chatterCount {
 
 textarea {
     font-size: 16px;
-    width: calc(100% - 16px);
+    width: calc(100% - 24px - 80px);
     height: 80px;
     margin: 8px;
     padding: 12px;
