--- a/client/css/style.css
+++ b/client/css/style.css
@@ -95,11 +95,11 @@ button:hover {
     filter: brightness(0.85);
 }
 
-img:hover {
+.interact:hover {
     filter: brightness(0.65);
 }
 
-img:active {
+.interact:hover:active {
     filter: brightness(0.5);
 }
 
