--- a/client/css/style.css
+++ b/client/css/style.css
@@ -103,6 +103,11 @@ button:hover {
     filter: brightness(0.5);
 }
 
+.drawing {
+    border: 2px solid #999;
+    border-radius: 2px;
+}
+
 errorText {
     font-size: 22px;
     color: #a22;
