--- a/client/css/dark.css
+++ b/client/css/dark.css
@@ -1,7 +1,7 @@
 body, html {
     padding: 0;
     margin: 0;
-    background-color: #bbbbbb;
+    background-color: #333333;
 }
 
 canvas{
@@ -9,52 +9,82 @@ canvas{
     z-index: 1;
 }
 
+/* Server spanners */
+.join {
+    color: #afa;
+}
+
+.needAccount {
+    color: #b88;
+}
+
+.cFailed {
+    color: #f88;
+}
+
+.whisper {
+    color: #39c;
+}
+
+.rank {
+    color: #88e;
+}
+
+.ban {
+    color: #f33;
+}
+
+.disconnect {
+    color: #d66;
+}
+
+/* Names */
 .baseName {
-    color: #000;
+    color: #fff;
 }
 
 .baseText {
-    color: #000;
+    color: #fff;
 }
 
 .guestName {
-    color: #444;
+    color: #ccc;
 }
 
 .guestText {
-    color: #444;
+    color: #ccc;
 }
 
 .adminName {
-    color: #a11;
+    color: #d77;
 }
 
 .adminText {
-    color: #200;
+    color: #fdd;
 }
 
 .modName {
-    color: #119;
+    color: #88e;
 }
 
 .modText {
-    color: #001;
+    color: #ddf;
 }
 
 .plusName {
-    color: #040;
+    color: #afa;
 }
 
 .plusText {
-    color: #010;
+    color: #efe;
 }
 
 .plusPlusName {
-    color: #550;
+    color: #ffa;
 }
 
 .plusPlusText {
-    color: #110;
+    color: #ffe;
 }
 
 /* The Modal (background for drawing) */
@@ -68,7 +98,7 @@ canvas{
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+    background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -110,21 +140,21 @@ button:hover {
 
 errorText {
     font-size: 22px;
-    color: #a22;
+    color: rgb(221, 70, 70);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 successText {
     font-size: 22px;
-    color: #2a2;
+    color: rgb(73, 216, 73);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 welcome {
     font-size: 32px;
-    color: #222;
+    color: #eee;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -132,7 +162,7 @@ welcome {
 
 typing {
     font-size: 16px;
-    color: #444;
+    color: #999;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -140,7 +170,7 @@ typing {
 
 loginName {
     font-size: 40px;
-    color: #222;
+    color: #eee;
     margin: 8px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -148,7 +178,7 @@ loginName {
 
 chatterCount {
     font-size: 28px;
-    color: #222;
+    color: #eee;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -156,6 +186,7 @@ chatterCount {
 
 textarea {
     font-size: 16px;
+    color: #ccc;
     width: calc(100% - 24px - 80px);
     height: 80px;
     margin: 8px;
@@ -163,12 +194,13 @@ textarea {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    background-color: #555;
     resize: none;
 }
 
 chatbox {
     font-size: 18px;
+    color: #ccc;
     width: calc(100% - 16px - 240px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -177,7 +209,7 @@ chatbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #555;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -185,6 +217,7 @@ chatbox {
 
 listbox {
     font-size: 18px;
+    color: #ccc;
     width: calc(240px - 16px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -193,7 +226,7 @@ listbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #555;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -201,6 +234,7 @@ listbox {
  
 input {
     position: fixed;
+    color: #ccc;
     font-size: 16px;
     height: 50px;
     margin: 8px;
@@ -208,11 +242,12 @@ input {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #777;
 }
 
 loginBox {
     font-size: 18px;
+    color: #ccc;
     width: calc(33.33% - 24px);
     height: calc(100% - 250px);
     text-align:left;
@@ -221,9 +256,8 @@ loginBox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #555;
     overflow: hidden !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
 }
- 
