--- a/client/css/dark.css
+++ b/client/css/dark.css
@@ -1,7 +1,7 @@
 body, html {
     padding: 0;
     margin: 0;
-    background-color: #333333;
+    background-color: #222;
 }
 
 canvas{
@@ -10,6 +10,11 @@ canvas{
 }
 
 /* Server spanners */
+
+.propose {
+    color: #ffa;
+}
+
 .join {
     color: #afa;
 }
@@ -60,15 +65,15 @@ canvas{
 }
 
 .adminText {
-    color: #fdd;
+    color: #fee;
 }
 
 .modName {
-    color: #88e;
+    color: #8288e0;
 }
 
 .modText {
-    color: #ddf;
+    color: #eef;
 }
 
 .plusName {
@@ -154,7 +159,7 @@ successText {
 
 welcome {
     font-size: 32px;
-    color: #eee;
+    color: #ddd;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -162,7 +167,7 @@ welcome {
 
 typing {
     font-size: 16px;
-    color: #999;
+    color: #bbb;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -170,7 +175,7 @@ typing {
 
 loginName {
     font-size: 40px;
-    color: #eee;
+    color: #ddd;
     margin: 8px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -178,7 +183,7 @@ loginName {
 
 chatterCount {
     font-size: 28px;
-    color: #eee;
+    color: #ddd;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -186,7 +191,7 @@ chatterCount {
 
 textarea {
     font-size: 16px;
-    color: #ccc;
+    color: #eee;
     width: calc(100% - 24px - 80px);
     height: 80px;
     margin: 8px;
@@ -194,13 +199,13 @@ textarea {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #555;
+    background-color: #333;
     resize: none;
 }
 
 chatbox {
     font-size: 18px;
-    color: #ccc;
+    color: #eee;
     width: calc(100% - 16px - 240px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -209,7 +214,7 @@ chatbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #555;
+    background-color: #333;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -217,7 +222,7 @@ chatbox {
 
 listbox {
     font-size: 18px;
-    color: #ccc;
+    color: #eee;
     width: calc(240px - 16px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -226,7 +231,7 @@ listbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #555;
+    background-color: #333;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -234,7 +239,7 @@ listbox {
  
 input {
     position: fixed;
-    color: #ccc;
+    color: #eee;
     font-size: 16px;
     height: 50px;
     margin: 8px;
@@ -242,12 +247,12 @@ input {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #777;
+    background-color: #666;
 }
 
 loginBox {
     font-size: 18px;
-    color: #ccc;
+    color: #eee;
     width: calc(33.33% - 24px);
     height: calc(100% - 250px);
     text-align:left;
@@ -256,7 +261,7 @@ loginBox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #555;
+    background-color: #333;
     overflow: hidden !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
