--- a/client/css/light.css
+++ b/client/css/light.css
@@ -4,9 +4,11 @@ body, html {
     background-color: #bbbbbb;
 }
 
-canvas{
+canvas {
     display:inline-block;
     z-index: 1;
+    border: 2px solid #999;
+    border-radius: 2px;
 }
 
 /* Server spanners */
