--- a/client/css/dark.css
+++ b/client/css/dark.css
@@ -41,6 +41,10 @@ canvas{
     color: #88e;
 }
 
+.slow {
+    color: #95e;
+}
+
 .ban {
     color: #f33;
 }
@@ -109,15 +113,7 @@ canvas{
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.7); /* Black w/ opacity */
-}
-
-/* Modal Content/Box */
-.modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    background-color: rgba(0, 0, 0, 0.85); /* Black w/ opacity */
 }
 
 button {
@@ -197,7 +193,7 @@ chatterCount {
 
 textarea {
     font-size: 16px;
-    color: #eee;
+    color: #ddd;
     width: calc(100% - 24px - 80px);
     height: 80px;
     margin: 8px;
@@ -211,7 +207,7 @@ textarea {
 
 chatbox {
     font-size: 18px;
-    color: #eee;
+    color: #ddd;
     width: calc(100% - 16px - 240px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -228,7 +224,7 @@ chatbox {
 
 listbox {
     font-size: 18px;
-    color: #eee;
+    color: #ddd;
     width: calc(240px - 16px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -245,7 +241,7 @@ listbox {
  
 input {
     position: fixed;
-    color: #eee;
+    color: #ddd;
     font-size: 16px;
     height: 50px;
     margin: 8px;
@@ -258,7 +254,7 @@ input {
 
 loginBox {
     font-size: 18px;
-    color: #eee;
+    color: #ddd;
     width: calc(33.33% - 24px);
     height: calc(100% - 250px);
     text-align:left;
@@ -271,4 +267,10 @@ loginBox {
     overflow: hidden !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
+}
+
+select {
+    border: 4px solid #999;
+    border-radius: 4px;
+    background-color: #333;
 }
