--- a/client/css/oled.css
+++ b/client/css/oled.css
@@ -1,105 +1,105 @@
 body, html {
     padding: 0;
     margin: 0;
-    background-color: #bbbbbb;
+    background-color: #000;
 }
 
-canvas {
+canvas{
     display:inline-block;
     z-index: 1;
-    border: 2px solid #bbbbbb;
+    border: 2px solid #000;
     border-radius: 2px;
 }
 
 /* Server spanners */
 
 .propose {
-    color: #660;
+    color: #ffa;
 }
 
 .join {
-    color: #080;
+    color: #afa;
 }
 
 .needAccount {
-    color: #300;
+    color: #b88;
 }
 
 .cFailed {
-    color: #700;
+    color: #f88;
 }
 
 .whisper {
-    color: #057;
+    color: #39c;
 }
 
 .check {
-    color: #035;
+    color: #68d;
 }
 
 .rank {
-    color: #004;
+    color: #88e;
 }
 
 .slow {
-    color: #306;
+    color: #95e;
 }
 
 .ban {
-    color: #f00;
+    color: #f33;
 }
 
 .disconnect {
-    color: #800;
+    color: #d66;
 }
 
 /* Names */
 .baseName {
-    color: #000;
+    color: #fff;
 }
 
 .baseText {
-    color: #000;
+    color: #fff;
 }
 
 .guestName {
-    color: #444;
+    color: #ccc;
 }
 
 .guestText {
-    color: #444;
+    color: #ccc;
 }
 
 .adminName {
-    color: #a11;
+    color: #d77;
 }
 
 .adminText {
-    color: #200;
+    color: #fee;
 }
 
 .modName {
-    color: #119;
+    color: #8288e0;
 }
 
 .modText {
-    color: #001;
+    color: #eef;
 }
 
 .plusName {
-    color: #040;
+    color: #afa;
 }
 
 .plusText {
-    color: #010;
+    color: #efe;
 }
 
 .plusPlusName {
-    color: #550;
+    color: #ffa;
 }
 
 .plusPlusText {
-    color: #110;
+    color: #ffe;
 }
 
 /* The Modal (background for drawing) */
@@ -113,7 +113,7 @@ canvas {
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.75); /* Black w/ opacity */
+    background-color: rgba(0, 0, 0, 0.85); /* Black w/ opacity */
 }
 
 button {
@@ -147,21 +147,21 @@ button:hover {
 
 errorText {
     font-size: 22px;
-    color: #a22;
+    color: rgb(221, 70, 70);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 successText {
     font-size: 22px;
-    color: #2a2;
+    color: rgb(73, 216, 73);
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 welcome {
     font-size: 32px;
-    color: #222;
+    color: #ddd;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -169,7 +169,7 @@ welcome {
 
 typing {
     font-size: 16px;
-    color: #444;
+    color: #bbb;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -177,7 +177,7 @@ typing {
 
 loginName {
     font-size: 40px;
-    color: #222;
+    color: #ddd;
     margin: 8px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -185,7 +185,7 @@ loginName {
 
 chatterCount {
     font-size: 28px;
-    color: #222;
+    color: #ddd;
     margin: 8px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -193,6 +193,7 @@ chatterCount {
 
 textarea {
     font-size: 16px;
+    color: #ddd;
     width: calc(100% - 24px - 80px);
     height: 80px;
     margin: 8px;
@@ -200,12 +201,13 @@ textarea {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f8f8f8;
+    background-color: #000;
     resize: none;
 }
 
 chatbox {
     font-size: 18px;
+    color: #ddd;
     width: calc(100% - 16px - 240px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -214,7 +216,7 @@ chatbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #000;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -222,6 +224,7 @@ chatbox {
 
 listbox {
     font-size: 18px;
+    color: #ddd;
     width: calc(240px - 16px);
     height: calc(100% - 80px - 32px - 48px - 24px);
     text-align:left;
@@ -230,7 +233,7 @@ listbox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f0f0f0;
+    background-color: #000;
     overflow-y: scroll !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -238,6 +241,7 @@ listbox {
  
 input {
     position: fixed;
+    color: #ddd;
     font-size: 16px;
     height: 50px;
     margin: 8px;
@@ -245,11 +249,12 @@ input {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #f2f2f2;
+    background-color: #000;
 }
 
 loginBox {
     font-size: 18px;
+    color: #ddd;
     width: calc(33.33% - 24px);
     height: calc(100% - 250px);
     text-align:left;
@@ -258,14 +263,14 @@ loginBox {
     box-sizing: border-box;
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #e4e4e4;
+    background-color: #000;
     overflow: hidden !important; 
     white-space: pre-wrap;
     word-wrap: break-word;
 }
- 
+
 select {
     border: 4px solid #999;
     border-radius: 4px;
-    background-color: #e4e4e4;
+    background-color: #000;
 }
