--- a/client/css/light.css
+++ b/client/css/light.css
@@ -132,11 +132,25 @@ button:hover {
     filter: brightness(0.85);
 }
 
+.selected {
+    box-sizing: border-box;
+    border: 4px solid #ff0;
+    border-radius: 4px;
+}
+
 .interact:hover {
     filter: brightness(0.65);
 }
 
 .interact:hover:active {
+    filter: brightness(0.5);
+}
+
+.selected:hover {
+    filter: brightness(0.65);
+}
+
+.selected:hover:active {
     filter: brightness(0.5);
 }
 
@@ -146,6 +160,11 @@ button:hover {
 }
 
 errorText {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    z-index: 2;
     font-size: 22px;
     color: #a22;
     text-align: center;
