--- a/client/css/oled.css
+++ b/client/css/oled.css
@@ -42,7 +42,7 @@ canvas{
 }
 
 .slow {
-    color: #95e;
+    color: #b7e;
 }
 
 .ban {
@@ -132,6 +132,12 @@ button:hover {
     filter: brightness(0.85);
 }
 
+.selected {
+    box-sizing: border-box;
+    border: 4px solid #ff0;
+    border-radius: 4px;
+}
+
 .interact:hover {
     filter: brightness(0.65);
 }
@@ -140,12 +146,21 @@ button:hover {
     filter: brightness(0.5);
 }
 
+.selected:hover {
+    filter: brightness(0.65);
+}
+
 .drawing {
     border: 2px solid #999;
     border-radius: 2px;
 }
 
 errorText {
+    -webkit-user-select: none; /* Safari */        
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    z-index: 2;
     font-size: 22px;
     color: rgb(221, 70, 70);
     text-align: center;
