--- a/client/css/light.css
+++ b/client/css/light.css
@@ -133,9 +133,8 @@ button:hover {
 }
 
 .selected {
-    box-sizing: border-box;
-    border: 4px solid #ff0;
-    border-radius: 4px;
+    outline: 4px solid #ff0;
+    outline-offset: -1px;
 }
 
 .interact:hover {
