--- a/client/css/dark.css
+++ b/client/css/dark.css
@@ -181,6 +181,14 @@ welcome {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+response {
+    font-size: 16px;
+    color: #ddd;
+    margin: 8px 8px;
+    text-align: left;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 typing {
     font-size: 16px;
     color: #bbb;
